--- a/content/works/bakti-dna.mdx
+++ b/content/works/bakti-dna.mdx
@@ -8,6 +8,7 @@ techstack: [TypeScript, NextJS (13), NX, Chakra UI]
 link: https://dnaekosistem.baktikominfo.id
 challenge: The client needed a unified platform capable of managing thousands of satellite links, internet access points, backbone nodes, and BTS assets distributed across remote regions. Existing systems were fragmented, relied heavily on manual data reconciliation, and struggled to deliver accurate operational visibility especially for infrastructure in hard-to-reach WPUTI areas.
 solution: We designed and implemented an integrated infrastructure management system with automated data ingestion pipelines, geospatial mapping, and real-time status monitoring. The platform consolidates satellite, fiber, and BTS data sources into a single operational dashboard, enabling proactive issue detection and streamlined field coordination. By optimizing API communication, caching, and background sync processes, the system ensures reliable performance even with intermittent connectivity typical of remote deployments.
+thumbnail: /works/BAKTI-DNA.avif
 ---
 
 ## About BAKTI DNA
@@ -16,4 +17,10 @@ BAKTI DNA Ecosystem is the official digital platform of BAKTI Kominfo the public
 
 BAKTI DNA provides a unified “analytical dashboard” aggregating data about infrastructure deployment and digital ecosystem initiatives across Indonesia. Through this portal, stakeholders (government, partners, public) can view and access information about programs such as free internet access, satellites, BTS networks to broader digital-ecosystem efforts in education, UMKM (micro-small businesses), tourism, healthcare, e-government, and more.
 
-![BAKTI DNA Interface]()
+<Image
+  src="/works/BAKTI-DNA.avif"
+  quality={50}
+  width={1024}
+  aspectRatio={16 / 9}
+  title="BAKTI DNA Inteface"
+/>
